[build-system]
requires = ["maturin>=1.12.6,<2.0"]
build-backend = "maturin"

[project]
name = "qs-codec"
version = "1.5.0"
description = "A query string encoding and decoding library for Python. Ported from qs for JavaScript."
readme = { file = "README.rst", content-type = "text/x-rst" }
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.8"
authors = [
    { name = "Klemen Tusar", email = "techouse@gmail.com" },
]
keywords = [
    "qs", "codec", "url", "query", "querystring", "query-string",
    "urlencode", "urldecode", "form-urlencoded", "percent-encoding",
    "rfc3986", "arrays", "nested", "brackets"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: Free Threading",
    "Programming Language :: Python :: Free Threading :: 3 - Stable",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
    "Topic :: Utilities",
    "Typing :: Typed",
]
[project.urls]
Homepage = "https://techouse.github.io/qs_codec/"
Documentation = "https://techouse.github.io/qs_codec/"
Repository = "https://github.com/techouse/qs_codec.git"
Issues = "https://github.com/techouse/qs_codec/issues"
Changelog = "https://github.com/techouse/qs_codec/blob/master/CHANGELOG.md"
Sponsor = "https://github.com/sponsors/techouse"
PayPal = "https://paypal.me/ktusar"

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "flake8",
    "flake8-colors",
    "flake8-docstrings",
    "flake8-import-order",
    "flake8-typing-imports",
    "isort",
    "mypy<1.11; python_version < \"3.9\"",
    "mypy<1.19; python_version >= \"3.9\" and platform_python_implementation == \"PyPy\"",
    "mypy>=1.11; python_version >= \"3.9\" and platform_python_implementation != \"PyPy\"",
    "maturin>=1.12.6,<2.0",
    "pep8-naming",
    "pylint",
    "pyright",
    "pytest-cov>=5.0.0",
    "pytest>=8.1.2",
    "toml>=0.10.2",
    "tox",
]

[tool.maturin]
manifest-path = "rust/Cargo.toml"
module-name = "qs_codec._qs_rust"
python-source = "src"
include = [{ path = "README.rst", format = "sdist" }]

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311", "py312", "py313", "py314"]
include = '\.pyi?$'
exclude = '''
(
    /(
        \.eggs
        | \.git
        | \.hg
        | \.mypy_cache
        | \.tox
        | \.venv
        | _build
        | buck-out
        | build
        | dist
        | docs
    )/
    | foo.py
)
'''

[tool.isort]
line_length = 120
profile = "black"
lines_after_imports = -1
known_first_party = "qs_codec"
skip_gitignore = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
norecursedirs = [".*", "venv", "env", "*.egg", "dist", "build"]
minversion = "8.1.1"
addopts = "-rsxX -l --tb=short --strict-markers"
markers = []

[tool.mypy]
mypy_path = "src"
python_version = "3.8"
exclude = ["tests", "docs", "build", "dist", "venv", "env", ".tox"]
show_error_codes = true
warn_return_any = true
warn_unused_configs = true

[tool.pyright]
pythonVersion = "3.8"
include = ["src/qs_codec"]
exclude = ["tests", "docs", "build", "dist", "venv", "env", ".tox"]
